Fix inventario defectuoso base64 images, logo fallback, and general optimizations